GPv3: Only opacity for the last layer is working (and affects all layers) #115467

Closed
opened 2023-11-27 12:15:11 +01:00 by Falk David · 2 comments
Member

System Information
Operating system: Linux
Graphics card: GeForce RTX 3060

Blender Version
Broken: main 27.11.2023
Worked: never

Short description of error
Adjusting the layer opacity doesn't work for layers that are not the bottom most layer.
Adjusting the opacity of the bottom most layer affects all other layers.

Exact steps for others to reproduce the error

  1. Create a new file.
  2. Add the default "Grease Pencil" > "Monkey".
  3. Adjust the opacity of the top layer.
**System Information** Operating system: Linux Graphics card: GeForce RTX 3060 **Blender Version** Broken: `main` 27.11.2023 Worked: never **Short description of error** Adjusting the layer opacity doesn't work for layers that are not the bottom most layer. Adjusting the opacity of the bottom most layer affects all other layers. **Exact steps for others to reproduce the error** 1. Create a new file. 2. Add the default "Grease Pencil" > "Monkey". 3. Adjust the opacity of the top layer.
Falk David added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-11-27 12:15:12 +01:00
Falk David added this to the Grease Pencil project 2023-11-27 12:15:14 +01:00
Falk David added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-27 12:15:33 +01:00
Iliya Katushenock added the
Module
Grease Pencil
label 2023-11-27 14:03:45 +01:00
Member

Looks like this is due to missing support of layer blending?: https://projects.blender.org/blender/blender/src/branch/main/source/blender/draw/engines/gpencil/gpencil_object.hh#L175

Short of knowledge here :)

Looks like this is due to missing support of layer blending?: https://projects.blender.org/blender/blender/src/branch/main/source/blender/draw/engines/gpencil/gpencil_object.hh#L175 Short of knowledge here :)
Author
Member

I believe that this should be working, but something was overlooked somewhere, so I created a bug report for it (mostly to keep track of the issue).

I believe that this should be working, but something was overlooked somewhere, so I created a bug report for it (mostly to keep track of the issue).
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 12:01:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115467
No description provided.